Get logic to work. Needs CSS.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="rockPaperScissors.js"></script>
+    <script src="rockPaperScissors.js" defer></script>
 </head>
-<body>
-    
+    <ul id="options"></ul>
+    <button id="button-start" onclick=start()>Play Game!</button>
 </body>
 </html>
